# jaramlaw-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: agentloop-gate.yml  ci.yml
agents/: README.md  atomic-claim-verifier.md  calendar-agent.md  contrarian-verifier.md  document-drafter-agent.md  family-context-agent.md  human-review-gate.md  intake-agent.md  law-retrieval-agent.md  rights-card-agent.md  security-agent.md  support-matching-agent.md  team.yaml
docs/: ai-research-skills-integration.md  architecture.md  contest-mapping.md  operational-agent-architecture.md  operational-readiness.md
examples/: scenario_A.py  scenario_B.py  scenario_C.py
handoff/: delegation-board.md
jaramlaw-agent-ui/: .env.example  README.md  brand-spec.md  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  server.ts
jaramlaw-agent-ui/src/: App.tsx  (+3 more)
scripts/: agentloop_observations.py  run_agentloop_gate.py
spec/: constitution.md  plan.md  spec.md  tasks.md  traceability.md
tests/: conftest.py  test_adversarial_critic.py  test_agentloop_gate.py  test_agentshield_integration.py  test_calendar.py  test_config.py  test_constitution.py  test_document_drafter.py  test_family_context.py  test_guard.py  test_law_retrieval.py  test_learning_loop.py  test_legalize_kr.py  test_mcp_server.py  test_model_routing_tiers.py  test_models.py  test_operational_governance.py  test_rights_card.py  test_scenarios.py  test_support_matching.py  test_verifier.py  test_workflow_validation.py
workflows/: family-legal-jaramlaw.workflow.yaml  jaramlaw-brain.workflow.yaml  jaramlaw-model-routing.workflow.yaml
(+95 files in other folders)
