[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaramlaw-agent"
version = "0.1.0"
description = "자람법(JaramLaw) — 가족 라이프스테이지 법령·정책 AI 동반자 (AITHOR Agent Framework 기반)"
requires-python = ">=3.10"
authors = [{name = "AITHOR / cafe99"}]
license = {text = "MIT"}
dependencies = [
  "pyyaml>=6.0",
]

# AgentShield 런타임 가드는 정식 의존성이다. PyPI 미배포라 여기 버전 핀을 걸 수 없어
# 로컬 경로로 설치한다(형제 저장소). 미설치 시 입력/출력 가드가 조용히 degrade하므로,
# 프로덕션 배포는 아래 중 하나로 반드시 설치를 보장할 것:
#   pip install -e ../AgentShield        # 형제 저장소 editable
#   또는 AGENTSHIELD_PATH 환경변수로 경로 지정 (agentshield_bridge._candidate_src_paths)
# 부재 여부는 `jaramlaw diagnose`의 agentshield.available 로 확인한다.

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
jaramlaw = "jaramlaw_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
